--- a/2021.md
+++ b/2021.md
@@ -6,6 +6,7 @@
 | May 6, 2021 | Apr 30, 2021 | FM | <a href="http://formalmethods2021.csp.escience.cn/">24th International Symposium on Formal Methods</a> | Nov 20-26, 2021 | Beijing, China | 
 | Apr 23, 2021 | Apr 16, 2021 | ASE | <a href="https://conf.researchr.org/home/ase-2021">36th IEEE/ACM International Conference on Automated Software Engineering</a> | Nov 15-19, 2021 | Melbourne, Australia | 
 | Apr 16, 2021 |  | SPLASH | <a href="https://2021.splashcon.org">12th ACM SIGPLAN conference on Systems, Programming, Languages, and Applications: Software for Humanity</a> | Oct 17-22, 2021 | Chicago, Illinois, USA | 
+| Apr 9, 2021 |  | ATVA | <a href="https://formal-analysis.com/atva/2021/">19th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 18-22, 2021 | Gold Coast, Australia | 
 | Apr 9, 2021 | Apr 2, 2021 | EMSOFT | <a href="https://esweek.org/emsoft/">International Conference on Embedded Software</a> | Oct 10-15, 2021 | virtual | 
 | Mar 7, 2021 | Feb 28, 2021 | TASE | <a href="https://tase2021.github.io/">15th International Symposium on Theoretical Aspects of Software Engineering</a> | Aug 25-27, 2021 | Shanghai, China | 
 | Mar 1, 2021 |  | SPIN | <a href="https://conf.researchr.org/home/spin-2021">27th International SPIN Symposium on Model Checking Software</a> | Jul 14-15, 2021 | Aarhus, Denmark | 
@@ -53,7 +54,6 @@
 | May 7, 2020 | May 1, 2020 | ISSRE | <a href="http://www.wut-dscl.cn/issre/ISSRE2020.html">31st IEEE International Symposium on Software Reliability Engineering</a> | Oct 28-31, 2020 | Wuhan, China | 
 | May 7, 2020 | Apr 28, 2020 | FORMATS | <a href="https://formats-2020.cs.ru.nl/">18th International Conference on Formal Modeling and Analysis of Timed Systems</a> | Sep 1-3, 2020 | Vienna, Austria | 
 | May 4, 2020 | Apr 27, 2020 | SEFM | <a href="https://event.cwi.nl/sefm2020">18th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 14-28, 2020 | Amsterdam, Netherlands | 
-| May 3, 2020 | Apr 26, 2020 | ATVA | <a href="http://fit.uet.vnu.edu.vn/atva2020">18th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 19-23, 2020 | Hanoi, Vietnam | 
 | May 1, 2020 |  | ICFEM | <a href="https://formal-analysis.com/icfem/2020">22nd International Conference on Formal Engineering Methods</a> | Nov 2-6, 2020 | Singapore | 
 | Apr 24, 2020 | Apr 22, 2020 | SAS | <a href="https://conf.researchr.org/home/sas-2020">27th International Static Analysis Symposium</a> | Nov 18-20, 2020 | Chicago, Illinois, USA | 
 | Apr 22, 2020 | Apr 15, 2020 | CONCUR | <a href="https://concur2020.forsyte.at">31st International Conference on Concurrency Theory</a> | Sep 1-4, 2020 | Vienna, Austria | 
