--- a/2021.md
+++ b/2021.md
@@ -2,8 +2,13 @@
 
 | Paper Submission | Abstract Submission | Conference | Conference Homepage | When? | Where? | 
 | --- | --- | --- | --- | --- | --- | 
+| May 20, 2021 | May 13, 2021 | RV | <a href="https://uva-mcps-lab.github.io/RV21/">21st International Conference on Runtime Verification</a> | Oct 11-14, 2021 | Virtual Conference | 
+| May 14, 2021 | May 7, 2021 | FMICS | <a href="https://qonfest2021.lacl.fr/fmics21.php">26th International Conference on Formal Methods for Industrial Critical Systems</a> | Aug 23-27, 2021 | Paris, France | 
+| May 14, 2021 | May 7, 2021 | FMCAD | <a href="https://fmcad.org/FMCAD21/">21st International Conference on Formal Methods in Computer-Aided Design</a> | Oct 20 - 22, 2021 | Yale University, Connecticut, USA | 
 | May 7, 2021 | Apr 30, 2021 | SOSP | <a href="https://sosp2021.mpi-sws.org/">28th ACM Symposium on Operating Systems Principles</a> | Oct 25-28, 2021 | Koblenz, Germany | 
 | May 6, 2021 | Apr 30, 2021 | FM | <a href="http://formalmethods2021.csp.escience.cn/">24th International Symposium on Formal Methods</a> | Nov 20-26, 2021 | Beijing, China | 
+| Apr 26, 2021 | Apr 19, 2021 | CONCUR | <a href="https://qonfest2021.lacl.fr/concur21.php">32nd International Conference on Concurrency Theory</a> | Auf 23-27, 2021 | Paris, France | 
+| Apr 25, 2021 |  | SAS | <a href="https://conf.researchr.org/home/sas-2021">28th International Static Analysis Symposium</a> | Oct 17-22, 2021 | Chicago, Illinois, USA | 
 | Apr 23, 2021 | Apr 16, 2021 | ASE | <a href="https://conf.researchr.org/home/ase-2021">36th IEEE/ACM International Conference on Automated Software Engineering</a> | Nov 15-19, 2021 | Melbourne, Australia | 
 | Apr 16, 2021 |  | SPLASH | <a href="https://2021.splashcon.org">12th ACM SIGPLAN conference on Systems, Programming, Languages, and Applications: Software for Humanity</a> | Oct 17-22, 2021 | Chicago, Illinois, USA | 
 | Apr 9, 2021 |  | ATVA | <a href="https://formal-analysis.com/atva/2021/">19th International Symposium on Automated Technology for Verification and Analysis</a> | Oct 18-22, 2021 | Gold Coast, Australia | 
@@ -47,18 +52,13 @@
 | Jul 4, 2020 |  | SETTA | <a href="http://lcs.ios.ac.cn/setta2020/">6th International Symposium on Dependable Software Engineering: Theories, Tools and Applications</a> | Nov 24-27, 2020 | Guangzhou, China | 
 | Jun 26, 2020 | Jun 22, 2020 | ICTAC | <a href="https://ictac2020.github.io">17th International Colloquium on Theoretical Aspects of Computing</a> | Nov 30-Dec 4, 2020 | Macau, China | 
 | Jun 22, 2020 | Jun 15, 2020 | IFM | <a href="https://ifm20.si.usi.ch/">16th International Conference on integrated Formal Methods</a> | Nov 16-20, 2020 | Lugano, Switzerland | 
-| May 25, 2020 |  | RV | <a href="https://rv20.ait.ac.at">20th International Conference on Runtime Verification</a> | Oct 6-9, 2020 | Los Angeles, California, USA | 
 | May 17, 2020 | May 10, 2020 | SMT | <a href="http://smt-workshop.cs.uiowa.edu/2020/index.shtml">18th International Workshop on Satisfiability Modulo Theories</a> | Jul 5-6, 2020 | Paris, France | 
-| May 15, 2020 | May 8, 2020 | FMICS | <a href="https://fmics20.ait.ac.at">25th International Conference on Formal Methods for Industrial Critical Systems</a> | Sep 2-3, 2020 | Vienna, Austria | 
 | May 12, 2020 | May 5, 2020 | OSDI | <a href="https://www.usenix.org/conference/osdi20">14th USENIX Symposium on Operating Systems Design and Implementation</a> | Nov 4-6, 2020 | Banff, Canada | 
 | May 7, 2020 | May 1, 2020 | ISSRE | <a href="http://www.wut-dscl.cn/issre/ISSRE2020.html">31st IEEE International Symposium on Software Reliability Engineering</a> | Oct 28-31, 2020 | Wuhan, China | 
 | May 7, 2020 | Apr 28, 2020 | FORMATS | <a href="https://formats-2020.cs.ru.nl/">18th International Conference on Formal Modeling and Analysis of Timed Systems</a> | Sep 1-3, 2020 | Vienna, Austria | 
 | May 4, 2020 | Apr 27, 2020 | SEFM | <a href="https://event.cwi.nl/sefm2020">18th IEEE International Conference on Software Engineering and Formal Methods</a> | Sep 14-28, 2020 | Amsterdam, Netherlands | 
 | May 1, 2020 |  | ICFEM | <a href="https://formal-analysis.com/icfem/2020">22nd International Conference on Formal Engineering Methods</a> | Nov 2-6, 2020 | Singapore | 
-| Apr 24, 2020 | Apr 22, 2020 | SAS | <a href="https://conf.researchr.org/home/sas-2020">27th International Static Analysis Symposium</a> | Nov 18-20, 2020 | Chicago, Illinois, USA | 
-| Apr 22, 2020 | Apr 15, 2020 | CONCUR | <a href="https://concur2020.forsyte.at">31st International Conference on Concurrency Theory</a> | Sep 1-4, 2020 | Vienna, Austria | 
 | Apr 20, 2020 | Apr 14, 2020 | VSTTE | <a href="https://sri-csl.github.io/VSTTE20">12th Working Conference on Verified Software: Theories, Tools, and Experiments</a> | Jul 19-20, 2020 | Los Angeles, California, USA | 
-| Apr 16, 2020 | Apr 9, 2020 | FMCAD | <a href="https://fmcad.forsyte.at/FMCAD20">20th International Conference on Formal Methods in Computer-Aided Design</a> | Sep 22 - 24, 2020 | Haifa, Israel | 
 | Feb 15, 2020 |  | LPAR | <a href="https://easychair.org/smart-program/LPAR-23">23rd International Conference on Logic for Programming, Artificial Intelligence and Reasoning</a> | May 22-27, 2020 | Alicante, Spain | 
 | Jan 23, 2020 | Jan 16, 2020 | IJCAR | <a href="https://ijcar2020.org">10th International Joint Conference on Automated Reasoning</a> | Jun 29-Jul 5, 2020 | Paris, France | 
 
